--- a/languages/wc_ar-ar.po
+++ b/languages/wc_ar-ar.po
@@ -2,17 +2,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: WooCommerce Arabic\n"
 "POT-Creation-Date: 2015-03-28 08:03+0300\n"
-"PO-Revision-Date: 2015-03-28 08:14+0300\n"
+"PO-Revision-Date: 2015-08-15 05:16+0300\n"
 "Last-Translator: Abdullah Helayel <i@updu.la>\n"
 "Language-Team: Abdullah Helayel <i@updu.la>\n"
 "Language: ar\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.7.5\n"
+"X-Generator: Poedit 1.8.4\n"
 "X-Poedit-Basepath: .\n"
-"Plural-Forms: nplurals=6; plural=(n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 "
-"&& n%100<=10 ? 3 : n%100>=11 && n%100<=99 ? 4 : 5);\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-KeywordsList: __\n"
 "X-Poedit-SearchPath-0: ..\n"
 
@@ -55,3 +54,15 @@ msgstr "ر.ق."
 #: ../woocommerce-ar.php:46
 msgid "SAR"
 msgstr "ر.س."
+
+#. Plugin Name of the plugin/theme
+msgid "WooCommerce Arabic"
+msgstr "ووكومرس باللغة العربية"
+
+#. Description of the plugin/theme
+msgid "Adds completed & proper Arabic translation to WooCommerce in addition to some missing GCC currencies."
+msgstr "لإضافة ترجمة متكاملة وصحيحة لووكومرس بجانب بعض عملات دول الخليج المفقودة من ووكومرس."
+
+#. Author of the plugin/theme
+msgid "Abdullah Helayel"
+msgstr "عبدالله الهليّل"
